# cppPython

./: CMakeLists.txt  README.md  README.md~
python/: add_module.py  image_module.py
src/: add.cpp  image.cpp  pyboost_cv3_converter.cpp  test.cpp~
